move each section styling to it's own scss file, and font-family to typography.scss. Remove the scrollNavigation buttons as they are completely broken. Add prefers-reduced-motion to remove the floating animation for the ocean garbage

--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -1,5 +1,10 @@
 @use "../utilities/variables" as *;
 
+* {
+  // apply font-family to all elements
+  font-family: "BubblegumSans";
+}
+
 @font-face {
   font-family: "BubblegumSans";
   src: local("Bubblegum Sans"), local("BubblegumSans-Regular"),
