--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,11 +6,28 @@
     opacity: 1;
   }
 }
+@keyframes swim {
+  from {
+    right: -150%;
+  }
+  to {
+    right: 100%;
+  }
+}
+@media (prefers-reduced-motion: reduced) {
+  @keyframes float {
+    0%, 100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-20px);
+    }
+  }
+}
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "BubblegumSans";
   scrollbar-width: none;
 }
 *::-webkit-scrollbar {
@@ -29,33 +46,6 @@ body {
   scroll-snap-type: y mandatory;
 }
 
-.scrollNavigation {
-  position: fixed;
-  right: 2rem;
-  bottom: 10rem;
-  z-index: 3;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-.scrollNavigation button {
-  background-color: white;
-  border: none;
-  padding: 1.2rem;
-  border-radius: 50%;
-  width: 1.5rem;
-  height: 1.5rem;
-  font-size: 28px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-}
-.scrollNavigation button:hover {
-  background-color: #eaeaea;
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
 .section {
   width: 100vw;
   height: 100vh;
@@ -64,50 +54,42 @@ body {
   overflow: hidden;
   scroll-snap-align: start;
 }
-.section#section-6 {
-  background-color: #4a2800;
+
+@media screen and (min-width: 600px) {
+  html {
+    font-size: 20px;
+  }
 }
-.section#section-5 img, .section#section-6 img {
-  position: absolute;
+* {
+  font-family: "BubblegumSans";
 }
-.section#section-5 {
-  justify-content: center;
-  text-align: center;
+
+@font-face {
+  font-family: "BubblegumSans";
+  src: local("Bubblegum Sans"), local("BubblegumSans-Regular"), url("/assets/fonts/BubblegumSans-Regular.woff2") format("woff2");
+  font-weight: 400;
+  font-display: swap;
 }
-.section__text5 {
-  align-self: flex-end;
-  margin-bottom: 40px;
+h1, p, a, ul {
+  color: white;
+  padding-inline: 1rem;
+  max-width: 1000px;
 }
-.section#section-6 {
-  background-color: #4a2800;
+
+h1 {
+  font-size: 40px;
 }
-.section__cookedFish {
-  z-index: 2;
-  width: 10.5rem;
-  height: 4.5rem;
-  top: 7.5rem;
-  left: 50%;
-  transform: translate(-50%);
+
+p, a, li {
+  font-size: 30px;
 }
-.section__text6 {
-  max-height: 382px;
+
+a:hover {
+  color: #eaeaea;
 }
-.section__text6 {
-  position: absolute;
-  width: 100vw;
-  bottom: 4%;
-  left: 50%;
-  transform: translate(-50%);
-}
-.section__textblock {
-  width: 1000px;
-  margin-inline: auto;
-  padding-block: 2rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-}
-.section__textblock h1 {
+
+li {
+  margin-left: 1rem;
   margin-bottom: 1rem;
 }
 
@@ -171,39 +153,17 @@ body {
   width: 1.5rem;
 }
 
-.hookFish__fish2 {
-  z-index: 2;
-  width: 18rem;
-  height: 10rem;
-  top: 12.2rem;
-  left: 6.8rem;
+@media (min-width: 768px) {
+  .section-1-2 #boat {
+    width: 20rem;
+  }
+  .section-1-2 .section-1-2__text {
+    font-size: 2rem;
+  }
+  .section-1-2 img {
+    width: 2rem;
+  }
 }
-.hookFish__fishHookWorm {
-  width: 3.5rem;
-  height: 19.4rem;
-  left: 5rem;
-}
-
-.dinner {
-  display: flex;
-  align-items: center;
-  position: absolute;
-  top: 2rem;
-  left: 50%;
-  transform: translate(-50%);
-}
-.dinner img {
-  position: static !important;
-}
-.dinner__dinnerPlate {
-  width: 15rem;
-  height: 15rem;
-}
-.dinner__fork, .dinner__knife {
-  width: 4rem;
-  height: 12rem;
-}
-
 #fact-3,
 #fact-4 {
   color: #ffffff;
@@ -261,75 +221,28 @@ body {
   animation: float 6s linear infinite;
 }
 
-@keyframes swim {
-  from {
-    right: -150%;
-  }
-  to {
-    right: 100%;
-  }
+.section#section-5 {
+  justify-content: center;
+  text-align: center;
 }
-@keyframes float {
-  0%, 100% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-20px);
-  }
-}
-@keyframes float_2 {
-  0%, 100% {
-    transform: translate(0, 0) rotate(0deg);
-  }
-  25% {
-    transform: translate(10px, -20px) rotate(-10deg);
-  }
-  50% {
-    transform: translate(0px, -30px) rotate(0deg);
-  }
-  75% {
-    transform: translate(-10px, -20px) rotate(10deg);
-  }
-}
-@keyframes float_3 {
-  0% {
-    transform: translateY(0) rotate(0deg);
-  }
-  25% {
-    transform: translateY(-15px) rotate(45deg);
-  }
-  50% {
-    transform: translateY(0) rotate(90deg);
-  }
-  75% {
-    transform: translateY(-15px) rotate(135deg);
-  }
-  100% {
-    transform: translateY(0) rotate(180deg);
-  }
-}
-@media (min-width: 768px) {
-  .section-1-2 #boat {
-    width: 20rem;
-  }
-  .section-1-2 .section-1-2__text {
-    font-size: 2rem;
-  }
-  .section-1-2 img {
-    width: 2rem;
-  }
-}
-/*@media screen and (min-width: 1400px) {
-  html {
-    font-size: 45px;
-  }
+.section__text5 {
+  align-self: flex-end;
+  margin-bottom: 40px;
 }
 
-@media screen and (min-width: 2000px) {
-  html {
-    font-size: 55px;
-  }
-}*/
+.hookFish__fish2 {
+  z-index: 2;
+  width: 18rem;
+  height: 10rem;
+  top: 12.2rem;
+  left: 6.8rem;
+}
+.hookFish__fishHookWorm {
+  width: 3.5rem;
+  height: 19.4rem;
+  left: 5rem;
+}
+
 @media screen and (min-width: 600px) {
   html {
     font-size: 20px;
@@ -348,6 +261,56 @@ body {
   .hookFish__fishHookWorm {
     left: 0;
   }
+}
+.section#section-6 {
+  background-color: #4a2800;
+}
+.section#section-5 img, .section#section-6 img {
+  position: absolute;
+}
+.section#section-6 {
+  background-color: #4a2800;
+}
+.section__cookedFish {
+  z-index: 2;
+  width: 10.5rem;
+  height: 4.5rem;
+  top: 7.5rem;
+  left: 50%;
+  transform: translate(-50%);
+}
+.section__text6 {
+  max-height: 382px;
+}
+.section__text6 {
+  position: absolute;
+  width: 100vw;
+  bottom: 4%;
+  left: 50%;
+  transform: translate(-50%);
+}
+
+.dinner {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 2rem;
+  left: 50%;
+  transform: translate(-50%);
+}
+.dinner img {
+  position: static !important;
+}
+.dinner__dinnerPlate {
+  width: 15rem;
+  height: 15rem;
+}
+.dinner__fork, .dinner__knife {
+  width: 4rem;
+  height: 12rem;
+}
+
+@media screen and (min-width: 600px) {
   .section__cookedFish {
     width: 14rem;
     height: 6rem;
@@ -370,31 +333,14 @@ body {
     top: 4rem;
   }
 }
-@font-face {
-  font-family: "BubblegumSans";
-  src: local("Bubblegum Sans"), local("BubblegumSans-Regular"), url("/assets/fonts/BubblegumSans-Regular.woff2") format("woff2");
-  font-weight: 400;
-  font-display: swap;
+.section__textblock {
+  width: 1000px;
+  margin-inline: auto;
+  padding-block: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
 }
-h1, p, a, ul {
-  color: white;
-  padding-inline: 1rem;
-  max-width: 1000px;
-}
-
-h1 {
-  font-size: 40px;
-}
-
-p, a, li {
-  font-size: 30px;
-}
-
-a:hover {
-  color: #eaeaea;
-}
-
-li {
-  margin-left: 1rem;
+.section__textblock h1 {
   margin-bottom: 1rem;
 }
