--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -8,7 +8,7 @@
 @font-face {
   font-family: "BubblegumSans";
   src: local("Bubblegum Sans"), local("BubblegumSans-Regular"),
-    url("/assets/fonts/BubblegumSans-Regular.woff2") format("woff2");
+    url("../../../../assets/fonts/BubblegumSans-Regular.woff2") format("woff2");
   font-weight: 400;
   font-display: swap;
 }
