--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -66,7 +66,7 @@ body {
 
 @font-face {
   font-family: "BubblegumSans";
-  src: local("Bubblegum Sans"), local("BubblegumSans-Regular"), url("./assets/fonts/BubblegumSans-Regular.woff2") format("woff2");
+  src: local("Bubblegum Sans"), local("BubblegumSans-Regular"), url("Tanix98.github.io/idg1292-2024-oblig3-group_12-improved/assets/fonts/BubblegumSans-Regular.woff2") format("woff2");
   font-weight: 400;
   font-display: swap;
 }
